hard-gists/d4d90bc5b8fb9a56fa2d4f2383a2eda7/run.log
=== Docker Run Log for d4d90bc5b8fb9a56fa2d4f2383a2eda7 ===
Started at: Mi 29. Okt 20:25:19 CET 2025

[2025-10-29 20:25:19] START: Running container for d4d90bc5b8fb9a56fa2d4f2383a2eda7
[2025-10-29 20:25:19] SUCCESS: Container 0c018e4c6180cdb04b6a8b908d6ed7ff455b9a59e2292fd4be5c204a7eb7ac31 started for d4d90bc5b8fb9a56fa2d4f2383a2eda7
=== Container logs for d4d90bc5b8fb9a56fa2d4f2383a2eda7 ===
  File "/snippet.py", line 43
    print '>>> 0x{:x}\t{}\tdisasm failure'.format(address, code.encode('hex'))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for d4d90bc5b8fb9a56fa2d4f2383a2eda7 ===
[2025-10-29 20:25:21] INFO: Container 0c018e4c6180cdb04b6a8b908d6ed7ff455b9a59e2292fd4be5c204a7eb7ac31 has stopped
